--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
                         <div class="mt-6">
                             <h4 class="font-semibold mb-3">Follow Me</h4>
                             <div class="flex space-x-4">
-                                <a href="https://linkedin.com/in/iftikhar-khan" class="text-blue-600 hover:text-blue-800 transition duration-300">LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/ikhan-connect" class="text-blue-600 hover:text-blue-800 transition duration-300">LinkedIn</a>
                                 <a href="https://github.com/ikhan2010" class="text-gray-800 hover:text-gray-600 transition duration-300">GitHub</a>
-                                <a href="https://twitter.com/ikhan2010" class="text-blue-400 hover:text-blue-600 transition duration-300">Twitter</a>
+                                <a href="https://x.com/ifty_k" class="text-blue-400 hover:text-blue-600 transition duration-300">Twitter</a>
                             </div>
                         </div>
                     </div>
